fixed spacing

--- a/Website/static/CSS/work.css
+++ b/Website/static/CSS/work.css
@@ -41,7 +41,7 @@ hr {
 }
 
 .line_break {
-    height:85px;
+    height:65px;
 
 }
 
